[gd_scene load_steps=3 format=3 uid="uid://0lr5w6dw4hlo"]

[ext_resource type="Script" path="res://Scripts/Parts/PartCore.gd" id="1_dg1ow"]
[ext_resource type="PackedScene" uid="uid://b1xh8r84l5wsg" path="res://Models/Parts/DebugChest.glb" id="1_vy8oa"]

[node name="PartCore" type="Node3D"]
script = ExtResource("1_dg1ow")

[node name="Mesh" parent="." instance=ExtResource("1_vy8oa")]
visible = false

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0117188, 0.221271, -0.0355835)
size = Vector3(0.425781, 0.367065, 0.391724)

[node name="SlotHead" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.416398, 0)

[node name="SlotArmL" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.416398, 0)

[node name="SlotArmR" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.416398, 0)

[node name="SlotMovement" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0039393, 0)
